<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<parent>

		<groupId>org.springframework.boot</groupId>

		<artifactId>spring-boot-starter-parent</artifactId>

		<version>3.3.7</version>

		<relativePath />

		<!-- lookup parent from repository -->

	</parent>

	<groupId>tn.esprit</groupId>

	<artifactId>pi</artifactId>

	<version>0.0.1-SNAPSHOT</version>

	<name>pi</name>

	<description>Demo project for Spring Boot</description>

	<url />

	<licenses>

		<license />

	</licenses>

	<developers>

		<developer />

	</developers>

	<scm>

		<connection />

		<developerConnection />

		<tag />

		<url />

	</scm>




	<properties>

		<java.version>17</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

	</properties>

	<dependencies>

		<dependency>

			<groupId>org.springframework.boot</groupId>

			<artifactId>spring-boot-starter-data-jpa</artifactId>

		</dependency>

		<dependency>

			<groupId>org.springframework.boot</groupId>

			<artifactId>spring-boot-starter-mail</artifactId>

		</dependency>

		<dependency>

			<groupId>org.springframework.boot</groupId>

			<artifactId>spring-boot-starter-security</artifactId>

		</dependency>


		<dependency>

			<groupId>org.springframework.boot</groupId>

			<artifactId>spring-boot-starter-mail</artifactId>

		</dependency>

		<dependency>

			<groupId>org.springframework.boot</groupId>

			<artifactId>spring-boot-starter-thymeleaf</artifactId>

		</dependency>



		<dependency>

			<groupId>org.springframework.boot</groupId>

			<artifactId>spring-boot-starter-validation</artifactId>

		</dependency>

		<dependency>

			<groupId>org.springframework.boot</groupId>

			<artifactId>spring-boot-starter-web</artifactId>

		</dependency>

		<dependency>

			<groupId>org.thymeleaf.extras</groupId>

			<artifactId>thymeleaf-extras-springsecurity6</artifactId>

		</dependency>

		<dependency>

			<groupId>org.springdoc</groupId>

			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>

			<version>2.3.0</version>

		</dependency>

		<dependency>

			<groupId>com.mysql</groupId>

			<artifactId>mysql-connector-j</artifactId>

			<scope>runtime</scope>

		</dependency>

		<!-- autres dépendances -->

		<!-- Lombok -->

		<dependency>

			<groupId>org.projectlombok</groupId>

			<artifactId>lombok</artifactId>

			<version>1.18.32</version>

			<!-- Version compatible avec Spring Boot 3.3.7 -->

			<scope>provided</scope>

		</dependency>

		<dependency>

			<groupId>org.springframework.boot</groupId>

			<artifactId>spring-boot-starter-test</artifactId>

			<scope>test</scope>

		</dependency>

		<dependency>

			<groupId>org.springframework.security</groupId>

			<artifactId>spring-security-test</artifactId>

			<scope>test</scope>

		</dependency>

		<dependency>

			<groupId>io.jsonwebtoken</groupId>

			<artifactId>jjwt-jackson</artifactId>

			<version>0.12.6</version>

		</dependency>

		<dependency>

			<groupId>io.jsonwebtoken</groupId>

			<artifactId>jjwt-api</artifactId>

			<version>0.12.6</version>

		</dependency>

		<dependency>

			<groupId>io.jsonwebtoken</groupId>

			<artifactId>jjwt-impl</artifactId>

			<version>0.12.6</version>

		</dependency>

		<dependency>

			<groupId>org.projectlombok</groupId>

			<artifactId>lombok</artifactId>

			<version>1.18.34</version>

			<scope>provided</scope>

		</dependency>

	</dependencies>

	<build>

		<plugins>

			<plugin>

				<groupId>org.springframework.boot</groupId>

				<artifactId>spring-boot-maven-plugin</artifactId>

			</plugin>

		</plugins>

	</build>

</project>